# SomeFrickinMediocreLemons

./: .gitignore  Battlefield.cpp  Battlefield.h  CMakeLists.txt  Card.cpp  Card.h  CardManagement.cpp  CardManagement.h  CardSelectionInfo.h  CardTypes.h  CopyPasta.txt  Debugging.h  ECardLocation.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  GlobalFunctions.h  Hand.cpp  Hand.h  IAction.h  IDragAndDroppable.h  KeyboardDelegate.cpp  KeyboardDelegate.h  MainMenuScene.cpp  MainMenuScene.h  ManaType.h  Placeable.cpp  Placeable.h  Player.cpp  Player.h  QueueScene.cpp  QueueScene.h  README.md  Scene.h  SceneManager.cpp  SceneManager.h  Settings.h  card.cpp  card.h  (+2 more)
Net/: Connector.h
UI/: Bar.cpp  Bar.h  Bars.cpp  Bars.h  Button.cpp  Button.h  CardPreview.h  CardSelector.cpp  CardSelector.h  ManaBars.cpp  ManaBars.h  PlayerHUD.cpp  PlayerHUD.h  UISystem.cpp  UISystem.h
actions/: DefaultAttack.cpp  DefaultAttack.h  FireballPlay.cpp  FireballPlay.h  FireballTap.cpp  FireballTap.h  FlamestrikePlay.cpp  FlamestrikePlay.h  VinesnatcherTap.cpp  VinesnatcherTap.h
cards/: Fireball.cpp  Fireball.h  Flamestrike.cpp  Flamestrike.h  Kalle.cpp  Kalle.h  PlayerCard.cpp  PlayerCard.h  Vinesnatcher.cpp  Vinesnatcher.h  fireball.cpp  fireball.h
client/: main.cpp
events/: EventCallback.h
net/: Connector.cpp  Connector.h  Protocol.h
playerData/: PlayerData.json  Schema.json
server/: Server.cpp  Server.h  ServerSettings.h  Warehouse.cpp  Warehouse.h  main.cpp
ui/: ActionSelector.cpp  ActionSelector.h  Bar.cpp  Bar.h  Button.cpp  Button.h  CardPreview.cpp  CardPreview.h  CardSelector.cpp  CardSelector.h  CardUI.cpp  CardUI.h  GameUI.cpp  GameUI.h  ManaBars.cpp  ManaBars.h  MultiSelect.cpp  MultiSelect.h  PlayerHUD.cpp  PlayerHUD.h  QuickTextBox.cpp  QuickTextBox.h  TextBox.cpp  TextBox.h  UIElement.cpp  UIElement.h  UISystem.cpp  UISystem.h
